# cuboid_abstraction

./: LICENSE  README.md  initial_training.py  iterative_training.py  mask_prediction_net.py  training_script.py
cext/: CMakeLists.txt  __init__.py
cext/src/: octree.cc  octree.cu.cc  octree.h  octree_conv_op.cc  octree_database_op.cc  octree_pooling_op.cc  octree_pooling_op.cu.cc  primitive_aligning_loss.cc  primitive_aligning_loss.cu.cc  primitive_aligning_loss_v2.cc  primitive_aligning_loss_v2.cu.cc  primitive_consistency_loss.cc  primitive_consistency_loss.cu.cc  primitive_consistency_loss_v2.cc  primitive_consistency_loss_v2.cu.cc  primitive_consistency_select_loss.cc  primitive_consistency_select_loss.cu.cc  primitive_consistency_split_loss.cc  primitive_consistency_split_loss.cu.cc  primitive_coverage_loss.cc  primitive_coverage_loss.cu.cc  primitive_coverage_loss_v2.cc  primitive_coverage_loss_v2.cu.cc  primitive_coverage_select_loss.cc  primitive_coverage_select_loss.cu.cc  primitive_coverage_split_loss.cc  primitive_coverage_split_loss.cu.cc  primitive_coverage_split_loss_v3.cc  primitive_coverage_split_loss_v3.cu.cc  primitive_cube_area_average_loss.cc  primitive_cube_area_average_loss.cu.cc  primitive_cube_coverage_loss.cc  primitive_cube_coverage_loss.cu.cc  primitive_cube_coverage_loss_v3.cc  primitive_cube_coverage_loss_v3.cu.cc  primitive_cube_coverage_loss_v4.cc  primitive_cube_coverage_loss_v4.cu.cc  primitive_cube_volume.cc  primitive_cube_volume_v2.cc  primitive_cube_volume_v2.cu.cc  (+20 more)
cext/test/: primitive_aligning_loss_op_test.py  (+25 more)
util/: decoder.py  (+6 more)
(+4 files in other folders)
